--- a/Don.html
+++ b/Don.html
@@ -73,8 +73,8 @@
   
     <div class="confirmation-wrapper">
         <div class="checkmark"></div>
-        <div class="confirmation-text">Vielen Dank für Ihren Antrag. Wir bestätigen den erfolgreichen Eingang Ihrer Unterlagen. Einer unserer Mitarbeitenden wird sich innerhalb der nächsten 48 Stunden mit Ihnen in Verbindung setzen!</div>
-        <div class="subtext">
+        <div class="confirmation-text">Vielen Dank für Ihren Antrag. Wir bestätigen den erfolgreichen Eingang Ihrer Unterlagen. Einer unserer Mitarbeitenden wird sich innerhalb der nächsten 48 Stunden mit Ihnen in Verbindung setzen.</div>
+    </div>
 </body>
 
 </html>
